# enf

./: .gitignore  notes.txt  pyproject.toml
enf/: partial_dump.sql
enf/cart/: admin.py  cart.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
enf/cart/migrations/: 0001_initial.py
enf/cart/templates/cart/: cart_item.html  cart_summary.html
enf/cart/templatetags/: cart_tags.py
enf/enf/: settings.py  urls.py
enf/main/: admin.py  models.py  urls.py  views.py
enf/main/migrations/: 0001_initial.py  0002_alter_productsize_product.py
enf/main/templates/main/: base.html  filter_modal.html  product_detail.html  search_button.html  search_input.html
enf/orders/: views.py
enf/orders/migrations/: 0001_initial.py
enf/orders/templates/orders/: checkout.html  checkout_content.html
enf/orders/templates/orders/partials/: summary.html
enf/payment/: views.py
enf/users/: admin.py  forms.py  models.py  urls.py  views.py
enf/users/migrations/: 0001_initial.py
enf/users/templates/users/: profile.html
