[project]
name = "enf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "stripe>=12.5.0",
]
